force-app/main/default/objects/hed__Term__c/fields/Academic_Semester__c.field-meta.xml
<CustomField>
    <fullName>Academic_Semester__c</fullName>
    <description>Semester of the Term (via ODS Term)</description>
    <formula>CASE(RIGHT(ODS_Term_ID__c , 2), &apos;10&apos;, &apos;Spring&apos;, &apos;60&apos;, &apos;Summer&apos;, &apos;70&apos;, &apos;Sr Vet Med FA&apos;, &apos;90&apos;, &apos;Fall&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Semester of the Term (via ODS Term)</inlineHelpText>
    <label>Academic Semester</label>
    <type>Text</type>
</CustomField>