force-app/main/default/objects/hed__Term__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <description>4 digit academic year.</description>
    <inlineHelpText>4 digit academic year.</inlineHelpText>
    <label>Academic Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>