force-app/main/default/objects/hed__Term__c/fields/Housing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Housing_End_Date__c</fullName>
    <label>Housing End Date</label>
    <type>Date</type>
</CustomField>