force-app/main/default/objects/hed__Term__c/fields/Housing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Housing_Start_Date__c</fullName>
    <label>Housing Start Date</label>
    <type>Date</type>
</CustomField>