force-app/main/default/objects/hed__Term__c/fields/ODS_Term_ID__c.field-meta.xml
<CustomField>
    <fullName>ODS_Term_ID__c</fullName>
    <description>Banner (ODS) Term Code.</description>
    <externalId>true</externalId>
    <inlineHelpText>Banner (ODS) Term Code.</inlineHelpText>
    <label>ODS Term ID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>